--- a/fundamentals/01-html/lesson-01-introduction.html
+++ b/fundamentals/01-html/lesson-01-introduction.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html class="no-js" lang="en">
+<html lang="en">
 <head>
   <!-- CHARACTER ENCODING & VIEWPORT FIRST -->
   <meta charset="utf-8">
