--- a/fundamentals/02-css/lesson-02-intermediate.html
+++ b/fundamentals/02-css/lesson-02-intermediate.html
@@ -7,31 +7,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- PRIMARY METADATA -->
-  <title>CSS Basics</title>
-  <meta name="description" content="An Introduction to CSS Basics for Complete Beginners">
+  <title>CSS Intermediate</title>
+  <meta name="description" content="A CSS Intermediate tutorial">
   <meta name="author" content="Wasula Benjamin">
 
   <!-- SEO AND INDEXING -->
   <meta name="robots" content="index, follow">
-  <meta name="keywords" content="web development basics, css, css3, introduction, basics">
+  <meta name="keywords" content="web development basics, css, css3, intermediate css">
 
   <!-- OPEN GRAPH/SOCIAL METADATA (SHOULD COME BEFORE ICONS)  -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://github.com/wasulabenjamin/web-basics">
-  <meta property="og:title" content="CSS Basics">
-  <meta property="og:description" content="An Introduction to CSS Basics for Complete Beginners">
+  <meta property="og:title" content="CSS Intermediate">
+  <meta property="og:description" content="A CSS Intermediate tutorial">
   <meta property="og:image" content="../../assets/img/social-media.png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="628">
-  <meta property="og:image:alt" content="CSS Basics Infographic">
+  <meta property="og:image:alt" content="CSS Intermediate Infographic">
   <meta property="og:site_name" content="Wasula Benjamin">
 
   <!-- TWITTER CARD TAGS -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="CSS Basics">
-  <meta name="twitter:description" content="An Introduction to CSS Basics for Complete Beginners">
+  <meta name="twitter:title" content="CSS Intermediate">
+  <meta name="twitter:description" content="A CSS Intermediate tutorial">
   <meta name="twitter:image" content="../../assets/img/social-media.png">
-  <meta name="twitter:image:alt" content="CSS Basics Infographic">
+  <meta name="twitter:image:alt" content="CSS Intermediate Infographic">
   <meta name="twitter:site" content="@wasulabenjamin">
   <meta name="twitter:creator" content="@wasulabenjamin">
   <meta name="twitter:domain" content="github.com/wasulabenjamin/web-basics">
@@ -58,217 +58,217 @@
 	<main>
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Box Sizing</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Width</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Height</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Dimension</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Max Inline Size</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Min Inline Size</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Max Block Size</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Min Block Size</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Overflow</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Visibility</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Scrollbars</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Zndex</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Position</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Positioning</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Bottom</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Float</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Clearfix</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Dropdowns</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Navbar</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Overlay</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Forms</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Align</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Buttons</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Image Sprites</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Multi Background</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Gradients</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Box Shadow</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Box Decoration Break</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Border Images</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Border Block</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Border Inline</h1>
 		</section>
