--- a/fundamentals/02-css/lesson-03-advanced.html
+++ b/fundamentals/02-css/lesson-03-advanced.html
@@ -7,31 +7,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- PRIMARY METADATA -->
-  <title>CSS Basics</title>
-  <meta name="description" content="An Introduction to CSS Basics for Complete Beginners">
+  <title>CSS Advanced</title>
+  <meta name="description" content="A CSS Advanced tutorial">
   <meta name="author" content="Wasula Benjamin">
 
   <!-- SEO AND INDEXING -->
   <meta name="robots" content="index, follow">
-  <meta name="keywords" content="web development basics, css, css3, introduction, basics">
+  <meta name="keywords" content="web development basics, css, css3, advanced css">
 
   <!-- OPEN GRAPH/SOCIAL METADATA (SHOULD COME BEFORE ICONS)  -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://github.com/wasulabenjamin/web-basics">
-  <meta property="og:title" content="CSS Basics">
-  <meta property="og:description" content="An Introduction to CSS Basics for Complete Beginners">
+  <meta property="og:title" content="CSS Advanced">
+  <meta property="og:description" content="A CSS Advanced tutorial">
   <meta property="og:image" content="../../assets/img/social-media.png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="628">
-  <meta property="og:image:alt" content="CSS Basics Infographic">
+  <meta property="og:image:alt" content="CSS Advanced Infographic">
   <meta property="og:site_name" content="Wasula Benjamin">
 
   <!-- TWITTER CARD TAGS -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="CSS Basics">
-  <meta name="twitter:description" content="An Introduction to CSS Basics for Complete Beginners">
+  <meta name="twitter:title" content="CSS Advanced">
+  <meta name="twitter:description" content="A CSS Advanced tutorial">
   <meta name="twitter:image" content="../../assets/img/social-media.png">
-  <meta name="twitter:image:alt" content="CSS Basics Infographic">
+  <meta name="twitter:image:alt" content="CSS Advanced Infographic">
   <meta name="twitter:site" content="@wasulabenjamin">
   <meta name="twitter:creator" content="@wasulabenjamin">
   <meta name="twitter:domain" content="github.com/wasulabenjamin/web-basics">
@@ -58,210 +58,210 @@
 	<main>
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Attr Selectors</h1>
 		</section>
 		
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Combinators</h1>
 		</section>
 		
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Pseudo Classes</h1>
 		</section>
 		
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Pseudo Elements</h1>
 		</section>
 		
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Hover</h1>
 		</section>
 		
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Focus</h1>
 		</section>
 		
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Transition</h1>
 		</section>
 		
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>2d transform</h1>
 		</section>
 		
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>3d transform</h1>
 		</section>
 		
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Translate</h1>
 		</section>
 		
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Animation</h1>
 		</section>
 		
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Zoom</h1>
 		</section>
 		
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Resize</h1>
 		</section>
 		
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Arrows</h1>
 		</section>
 		
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Quotes</h1>
 		</section>
 		
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Order</h1>
 		</section>
 		
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Flexbox</h1>
 		</section>
 		
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Text Effects</h1>
 		</section>
 		
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Text Shadow</h1>
 		</section>
 		
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Caret Color</h1>
 		</section>
 		
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Tooltips</h1>
 		</section>
 		
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Loaders</h1>
 		</section>
 		
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Pagination</h1>
 		</section>
 		
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Counters</h1>
 		</section>
 		
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Clip</h1>
 		</section>
 		
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Shapes</h1>
 		</section>
 		
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Masking</h1>
 		</section>
 		
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Style Images</h1>
 		</section>
 		
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Grid</h1>
 		</section>
 		
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Grid Layout</h1>
 		</section>
