--- a/fundamentals/02-css/lesson-04-professional.html
+++ b/fundamentals/02-css/lesson-04-professional.html
@@ -7,31 +7,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- PRIMARY METADATA -->
-  <title>CSS Basics</title>
-  <meta name="description" content="An Introduction to CSS Basics for Complete Beginners">
+  <title>Professional Level CSS</title>
+  <meta name="description" content="A Professional Level CSS tutorial">
   <meta name="author" content="Wasula Benjamin">
 
   <!-- SEO AND INDEXING -->
   <meta name="robots" content="index, follow">
-  <meta name="keywords" content="web development basics, css, css3, introduction, basics">
+  <meta name="keywords" content="web development basics, css, css3, professional css">
 
   <!-- OPEN GRAPH/SOCIAL METADATA (SHOULD COME BEFORE ICONS)  -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://github.com/wasulabenjamin/web-basics">
-  <meta property="og:title" content="CSS Basics">
-  <meta property="og:description" content="An Introduction to CSS Basics for Complete Beginners">
+  <meta property="og:title" content="Professional Level CSS">
+  <meta property="og:description" content="A Professional Level CSS tutorial">
   <meta property="og:image" content="../../assets/img/social-media.png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="628">
-  <meta property="og:image:alt" content="CSS Basics Infographic">
+  <meta property="og:image:alt" content="Professional Level CSS Infographic">
   <meta property="og:site_name" content="Wasula Benjamin">
 
   <!-- TWITTER CARD TAGS -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="CSS Basics">
-  <meta name="twitter:description" content="An Introduction to CSS Basics for Complete Beginners">
+  <meta name="twitter:title" content="Professional Level CSS">
+  <meta name="twitter:description" content="A Professional Level CSS tutorial">
   <meta name="twitter:image" content="../../assets/img/social-media.png">
-  <meta name="twitter:image:alt" content="CSS Basics Infographic">
+  <meta name="twitter:image:alt" content="Professional Level CSS Infographic">
   <meta name="twitter:site" content="@wasulabenjamin">
   <meta name="twitter:creator" content="@wasulabenjamin">
   <meta name="twitter:domain" content="github.com/wasulabenjamin/web-basics">
@@ -58,245 +58,245 @@
 	<main>
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Hyphens</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Hyphenate Character</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Opacity</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Writing Mode</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Unicodeidi</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>minontent</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Inset</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Isolation</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Overscroll</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Justify Items</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Justify Self</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Tab Size</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Pointer Events</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Place Content</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Place Items</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Place Self</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Mix Blend Mode</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Offset</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Accent Color</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>User Select</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Cascading</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Visibility</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Layers</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>@ Rules</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Paged Media</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Printing</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Layouts</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Validations</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Important</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Multi columns</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Variables</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Functions</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Math Functions</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Specificity</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>Custom Properties</h1>
 		</section>
