--- a/fundamentals/02-css/lesson-05-responsive.html
+++ b/fundamentals/02-css/lesson-05-responsive.html
@@ -7,31 +7,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- PRIMARY METADATA -->
-  <title>CSS Basics</title>
-  <meta name="description" content="An Introduction to CSS Basics for Complete Beginners">
+  <title>Responsive CSS</title>
+  <meta name="description" content="An Introduction to Responsive CSS for Complete Beginners">
   <meta name="author" content="Wasula Benjamin">
 
   <!-- SEO AND INDEXING -->
   <meta name="robots" content="index, follow">
-  <meta name="keywords" content="web development basics, css, css3, introduction, basics">
+  <meta name="keywords" content="web development basics, css, css3, introduction, responsive css">
 
   <!-- OPEN GRAPH/SOCIAL METADATA (SHOULD COME BEFORE ICONS)  -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://github.com/wasulabenjamin/web-basics">
-  <meta property="og:title" content="CSS Basics">
-  <meta property="og:description" content="An Introduction to CSS Basics for Complete Beginners">
+  <meta property="og:title" content="Responsive CSS">
+  <meta property="og:description" content="An Introduction to Responsive CSS for Complete Beginners">
   <meta property="og:image" content="../../assets/img/social-media.png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="628">
-  <meta property="og:image:alt" content="CSS Basics Infographic">
+  <meta property="og:image:alt" content="Responsive CSS Infographic">
   <meta property="og:site_name" content="Wasula Benjamin">
 
   <!-- TWITTER CARD TAGS -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="CSS Basics">
-  <meta name="twitter:description" content="An Introduction to CSS Basics for Complete Beginners">
+  <meta name="twitter:title" content="Responsive CSS">
+  <meta name="twitter:description" content="An Introduction to Responsive CSS for Complete Beginners">
   <meta name="twitter:image" content="../../assets/img/social-media.png">
-  <meta name="twitter:image:alt" content="CSS Basics Infographic">
+  <meta name="twitter:image:alt" content="Responsive CSS Infographic">
   <meta name="twitter:site" content="@wasulabenjamin">
   <meta name="twitter:creator" content="@wasulabenjamin">
   <meta name="twitter:domain" content="github.com/wasulabenjamin/web-basics">
@@ -58,56 +58,56 @@
 	<main>
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>CSS RWD Introduction</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>CSS RWD Viewport</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>CSS RWD Grid View</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>CSS RWD Media Queries</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>CSS RWD Images</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>CSS RWD Videos</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>CSS RWD Frameworks</h1>
 		</section>
 
 		<!-- 
 
-		 -->
+		-->
 		<section>
 			<h1>CSS Media Queries</h1>
 		</section>
